fix(buttons|modals): prevent modal footer item overflow (#129)
* Update `.c-btn` to use `text-overflow: ellipsis`.
* Update `.c-dialog__footer__item` display flex with `min-width: 0`.

--- a/packages/buttons/src/_base.css
+++ b/packages/buttons/src/_base.css
@@ -26,10 +26,9 @@
   --zd-btn--sm-min-width: calc(calc(46 / 12 * 1em) + calc(var(--zd-btn--sm-padding) * 2));
 }
 
-/* 1. IE inner spacing fix.
- * 2. Anchor tag reset.
- * 3. Override for <input> & <button> elements.
- * 4. FF <input type="submit" fix. */
+/* 1. Anchor tag reset.
+ * 2. Override for <input> & <button> elements.
+ * 3. FF <input type="submit" fix. */
 
 .c-btn {
   display: inline-block;
@@ -41,14 +40,15 @@
   cursor: pointer;
   padding: 0 var(--zd-btn-padding);
   min-width: var(--zd-btn-min-width);
-  overflow: visible; /* [1] */
+  overflow: hidden;
   vertical-align: middle;
   text-align: center;
-  text-decoration: none; /* [2] */
+  text-decoration: none; /* [1] */
+  text-overflow: ellipsis;
   line-height: var(--zd-btn-line-height);
   white-space: nowrap;
   color: var(--zd-btn-color);
-  font-family: inherit; /* [3] */
+  font-family: inherit; /* [2] */
   font-size: var(--zd-btn-font-size);
   font-weight: var(--zd-btn-font-weight);
   -webkit-font-smoothing: subpixel-antialiased;
@@ -57,7 +57,7 @@
   -webkit-touch-callout: none;
 }
 
-.c-btn::-moz-focus-inner { /* [4] */
+.c-btn::-moz-focus-inner { /* [3] */
   border: 0;
   padding: 0;
 }
